--- a/5.0/printer/PrinterTicket.cshtml
+++ b/5.0/printer/PrinterTicket.cshtml
@@ -12,8 +12,6 @@ dynamic queueid = CommonGuidId.FromString(Request["queueid"]);
 dynamic catids = GuidIdsFieldInstance.ParseValue("",Request["catid"]).Value;
 var ticket = Vocatis.CreateTicket(queueid, catids);
 
-var apppath = Href("App.cshtml", new {id=ticket.Id});
-var appurl = new Uri(HttpContext.Current.Request.Url, apppath).AbsoluteUri;
 @Scripts.Render("js/jquery.qrcode.js")
 <section class="ticket">
   <header>
@@ -27,7 +25,7 @@ var appurl = new Uri(HttpContext.Current.Request.Url, apppath).AbsoluteUri;
   <section class="qrcode">
     @if (withQrCode) {
     <h4>Aufruf verfolgen</h4>
-    <a href="@appurl"></a>
+    <a href="@Href("App.cshtml", new {id=ticket.Id});"></a>
     }
     <img src="customerlogo.png" class="customerlogo" alt="Ersatztext">
   </section>
@@ -35,7 +33,7 @@ var appurl = new Uri(HttpContext.Current.Request.Url, apppath).AbsoluteUri;
   </footer>
 </section>
 <script type="text/javascript">
-  var appurl = $(".qrcode>a").attr("href");
+  var appurl = new URL($(".qrcode>a").attr("href"), window.location.href).href;
   $("section.qrcode>a").qrcode({text: appurl})
 </script>
 }
