Vorlage Warteschlangeninfo hinzugefügt

--- a/5.0/styles/colors.scss
+++ b/5.0/styles/colors.scss
@@ -1,6 +1,6 @@
 
 /* All colors defined here */
-$color-primary-background: #53668D;
+$color-primary-background: #53668d;
 $color-primary-shadowred:#53668D;
 $color-primary-foreground: white;
 $color-secondary-background:#d7d7d7;
