Create printer stub

--- a/printer/App.cshtml
+++ b/printer/App.cshtml
@@ -11,12 +11,12 @@
 </head>
 <body>
   <header>
- <img src="plattform_01.png" class="plattform" alt="plattform">
+ <img src="images/plattform.png" class="plattform" alt="plattform">
  <h1><span style="text-transform:uppercase">Wartezeit</span>  Live-Abfrage</h1>
 </header>
 
 <section class="logo">
-  <img src="customerlogo.png" />
+  <img src="images/customerlogo.png" />
 </section>
 
 <div id="content" data-content-src="@Href("AppContent.cshtml", new {id=Request["id"]})">
