Add ticket icons (requires iSign >= 5.0.113.0)

--- a/display/List3.cshtml
+++ b/display/List3.cshtml
@@ -39,6 +39,10 @@
                         {
                             <img src="termin.png" class="termin" alt="termin">
                         }
+                        @if (!String.IsNullOrEmpty(x.IconUrl))
+                        {
+                            <img src="@Href(x.IconUrl)">
+                        }
                         @x.Number
                     </td>
                     <td class="room">@x.RoomName</td>
