--- a/display/List.cshtml
+++ b/display/List.cshtml
@@ -26,6 +26,10 @@
                         {
                             <img src="termin.png" class="termin" alt="termin">
                         }
+                        @if (!String.IsNullOrEmpty(x.IconUrl))
+                        {
+                            <img src="@Href(x.IconUrl)">
+                        }
                         @x.Number
                     </td>
                     <td class="room">@x.RoomName</td>
