--- a/printer/PrinterTicket.cshtml
+++ b/printer/PrinterTicket.cshtml
@@ -1,4 +1,5 @@
 @using iSign
+@using ISS.Session
 @using Stolltec.Vocatis
 @using System.Web.Optimization
 @using Stolltec.Vocatis.Model
@@ -14,7 +15,13 @@
 @helper content(bool withQrCode, string tracking_id) {
 dynamic queueid = CommonGuidId.FromString(Request["queueid"]);
 dynamic catids = GuidIdsFieldInstance.ParseValue("",Request["catid"]).Value;
-var ticket = Vocatis.CreateTicket(queueid, catids);
+WaitNumber ticket;
+using (var voc = SessionInstancesModule.GetInstance().UseSharedInstance<IVocatisData>())
+{
+    ticket = voc.Instance.NewNumber(queueid, catids);
+    ticket.IconUrl = Href("icons/{num}.svg".Replace("{num}", ticket.Number));
+    voc.Instance.UpdateNumber(ticket);
+}
 
 @Scripts.Render("js/jquery.qrcode.js")
 <section class="ticket">
@@ -25,6 +32,7 @@ var ticket = Vocatis.CreateTicket(queueid, catids);
   <h1>
     @ticket.Number
   </h1>
+  <img src="@Href(ticket.IconUrl)">
   <img src="images/separation.png" class="separation" alt="Trennung">
   <section class="qrcode">
     @if (withQrCode) {
