--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,6 +1,6 @@
 
 /* All colors defined here */
-$color-primary-background: #53668D;
+$color-primary-background: #002d67;
 $color-primary-shadowred:#53668D;
 $color-primary-foreground: white;
 $color-secondary-background:#d7d7d7;
