--- a/styles/printer.scss
+++ b/styles/printer.scss
@@ -1,12 +1,23 @@
 
 body.printer 
 {
+    background-color: #002d67;;
+    height: 70vh;       
+    
+    h1 
+        {
+        
+            text-transform: uppercase;
+            font-weight: 900;
+            margin: 20vh 0 0 15vw;
+            color: white;
+        } 
+    ;
     header
     {
         display: block;
-        margin: 0 15vw 4vh 15vw;
         height: 16vh;
-        width: 100%; 
+        background-color: white;
       
         
         svg
@@ -16,249 +27,23 @@ body.printer
 
         .plattformlogo 
         { 
-            height:100%;
+            height: 30%;
+            margin: 4vh 0vw 4vh 10vw;
         }
 
-        h1 
-        {
-            display: inline;
-            text-transform: uppercase;
-            font-weight: 900;
-            margin: 0 0 0 2vw;
-        } 
+
     
         clear: both;
         display: block;
     }
 
-    section.info
+
+    a
     {
-        height: 10vh;
-    }
 
-    main, .main
-    {
-        position: relative;
-
-        section
-        {
-            position: absolute;
-            left: 0;
-            right: 0;
-            height: 90vh;
-            padding: 0 15vw;
-            background-color: $color-common-background;
-        }
-    
-        section#idle
-        {
-            ul, li
-            {
-                list-style: none;
-                margin: 0;
-                padding: 0;
-            }
-
-            .single-button
-            {
-                display: none;
-                line-height: 2vh;
-                
-                img
-                {
-                    opacity: 0.2;
-                    width: 50%;
-                }
-            }
-            ul.buttons-1
-            {
-                .btn>div
-                {
-                    height: 24vh;
-                }
-                .single-button
-                {
-                    display: block;
-                }
-            }
-            ul.buttons-7, ul.buttons-8
-            {
-                .btn>div
-                {
-                    height: 7vh;
-                }
-            }
-            .btn.next-one>div:last-child div:nth-child(2) svg
-            {
-                opacity: 0.5;
-                .cls-2 { display:none; }
-            }
-           
-
-            .btn.closed >div:last-child 
-            {
-                background-color: $color-highlight-background;
-                padding: 2vh 0vw;
-                text-align: center;
-                box-sizing: border-box;
-                box-shadow: 1px 3px 1px $color-highlight-background;
-                font-size: 0.8em;
-                font-weight: bold; 
-
-            }
-
-
-            .btn
-            {
-                
-                display: block;
-                margin: 2vh 0;
-                
-                &>div
-                {
-                    height: 8vh;
-                    float:left;
-
-                    h2
-                    {
-                        text-align: center;
-                        font-weight: bold;
-                        font-size: 2.5em;
-                    }
-                    &>svg, .notch
-                    {
-                        position: absolute;
-                        margin-top: 2vh;
-                        fill: $color-common-background;
-                    }
-                   
-                    &:first-child
-                    {
-                        width: 0%;
-                    }
-                    &:nth-child(2)
-                    {
-                        width: 70%;
-                        text-align: center;
-                        line-height: 8vh;
-                        font-weight: bold;
-                        font-size: 1.5em;
-                        background-color:$color-secondary-background;
-                        color: $color-secondary-foreground;
-						box-shadow: 1px 3px 1px $color-secondary-shadow;
-                    }
-
-                    &:last-child
-                    {
-                        width: 30%;
-                        float: left;
-                        font-size: 0.75em;
-                        background-color: $color-primary-background;
-                        color: $color-primary-foreground;
-                        box-shadow: 1px 3px 1px $color-primary-shadow;
-
-
-                        div 
-                        {
-                            float: left;
-                            &:first-child
-                            {
-                                width: 50%;
-                                height: 8vh;
-                                
-                                span
-                                {
-                                    box-sizing: border-box;
-                                    height: 7vh;
-                                    padding: 0vh 1vw;
-                                    display: table-cell;
-                                    vertical-align: middle;
-                                    text-align: center;
-                                }
-                            }
-                            &:nth-child(2)
-                            {
-                                width: 50%;
-                                height: 8vh;
-                                line-height: 7vh;
-                                text-align: center;
-                                
-                                /* personenanzahl */
-                                svg
-                                {
-                                    height: 70%;
-                                    vertical-align: middle;
-                                    .cls-1{fill:$color-primary-foreground;}
-                                    .cls-2{font-size:1em; color:$color-primary-background;}
-                                }
-                            }
-                            &:last-child
-                            {
-                                position: relative;
-                                width: 100%;
-                                height: 16vh;
-
-                                span
-                                {
-                                    text-align: center;
-                                    position: absolute;
-                                    bottom: 1vh;
-                                    right: 1vw;
-                                    left: 1vw;    
-                                }
-                                img
-                                {
-                                    height: 50%;
-                                    vertical-align: middle;
-                                }
-                            }
-
-
-                        }
-                    }
-
-                }
-
-                &:after
-                {
-                    content: "";
-                    clear: both;
-                    display: block;
-                }
-           }
-        }
-           
-        section#waitPopup, section#takePopup
-        {
-            text-align: center; 
-
-            >h4
-            {
-            margin-top: 5vh;
-            font-size: 1.5em;
-            color:$color-secondary-foreground;
-            }
-
-           #wait
-           {
-            width: 40%;
-            opacity: 0.5;
-           } 
-           >div
-           { 
-            padding: 8vh;
-            background-color:$color-secondary-background;
-            } 
-
-            >h6
-            {
-            font-size: 1.25em;
-            margin-top: 5vh;
-            color:$color-primary-background;
-            }
-
-            
-        }
+        text-decoration: none;
+        float: left;
+        margin: 40vh 0 0 15vw;
     }
 
     footer
