--- a/styles/app.scss
+++ b/styles/app.scss
@@ -19,7 +19,7 @@ html, body
 {
     background-color: $color-common-background;
     color: $color-common-foreground;
-    font-family: Verdana, "Lucida Sans Unicode", sans-serif;
+    font-family: Frutiger-vr, Verdana, "Lucida Sans Unicode", sans-serif;
 
     @media (orientation: landscape)
     {
