--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -3,7 +3,7 @@
 $color-primary-background: #002d67;
 $color-primary-shadowred:#53668D;
 $color-primary-foreground: white;
-$color-secondary-background:#d7d7d7;
+$color-secondary-background:#eb6608;
 $color-secondary-foreground:#707173;
 $color-secondary-shadow: #c3c3c3;
 $color-primary-shadow:  #53668D;
