--- a/printer/P0_Main.cshtml
+++ b/printer/P0_Main.cshtml
@@ -15,10 +15,13 @@ Printer main entry page
   Layout = "PrinterLayout.cshtml";
 }
 
-
+<main class="site-content">
 <h1>HERZLICH WILLKOMMEN!</h1>
-<ul class="buttons">
-<li class="termin"><a href='@Model.Navigate("P1_Appointment.cshtml")'><h4>Ich habe einen Termin</h4></a></li>
-<li class="ohnetermin"><a href='@Model.Navigate("P1_GetTicket.cshtml")'><h4>Heute ganz spontan</h4></a></li>
-</ul>
+</main>
 
+<nav class="site-nav">
+    <span class="termin"><a href='@Model.Navigate("P1_Appointment.cshtml")'><h4>Ich habe einen Termin</h4></a></span>
+    <span class="ohnetermin"><a href='@Model.Navigate("P1_GetTicket.cshtml")'><h4>Heute ganz spontan</h4></a></span>
+</nav>
+
+<footer class="site-footer"></footer>
