--- a/printer/P0_Main.cshtml
+++ b/printer/P0_Main.cshtml
@@ -14,14 +14,14 @@ Printer main entry page
   PageData["show_back"] = false;
   Layout = "PrinterLayout.cshtml";
 }
-
 <main class="site-content">
-<h1>HERZLICH WILLKOMMEN!</h1>
+  <h1>HERZLICH WILLKOMMEN!</h1>
+  <h2>Schön, dass Sie da sind. Haben Sie einen Termin vereinbart?</h2>
 </main>
 
 <nav class="site-nav">
-    <span class="termin"><a href='@Model.Navigate("P1_Appointment.cshtml")'><h4>Ich habe einen Termin</h4></a></span>
-    <span class="ohnetermin"><a href='@Model.Navigate("P1_GetTicket.cshtml")'><h4>Heute ganz spontan</h4></a></span>
+  <a href='@Model.Navigate("P1_Appointment.cshtml")'>Ich habe<br> einen Termin</a>
+  <a href='@Model.Navigate("P1_GetTicket.cshtml")'>Heute<br>ganz spontan</a>
 </nav>
 
 <footer class="site-footer"></footer>
