--- a/styles/printer.scss
+++ b/styles/printer.scss
@@ -1,24 +1,28 @@
 
 body.printer 
-{
-       
-       header
+{  
+
+    header
     {
         display: block;
         background-color: white;
-        height: 16vh;
+        height: 12vh;
       
         
-        svg
+        .home
         {
-            height: 20vh;
+            width: 7%;
+            margin: 3vh 10vw 0vh 0vw;
+            float:right;
+            border: 10px solid red;
+            padding:3vw;
         }
 
         .plattformlogo 
         { 
-            height: 30%;
+            height: 40%;
             width: auto;
-            margin: 5vh 0vw 0vh 10vw;
+            margin: 4vh 10vw 0vh 10vw;
         
         }
     }    
@@ -28,15 +32,43 @@ body.printer
         
         text-transform: uppercase;
         font-size: 6em;
-        padding: 20vh 0 0 10vw;
+        padding: 12vh 0 0 10vw;
         color:$color-highlight-foreground;
-        position:absolute; 
+        margin:0;
     } 
 
-    h4
+    h2 
     {
-        font-size: 1.5em;
-    }
+        
+        font-size: 2.9em;
+        padding: 8vh 0 0 10vw;
+        color:$color-highlight-foreground;
+        top: 40vh;
+        width: 80%;
+        
+    } 
+    
+    h3 
+    {
+        
+        font-size: 2.5em;
+        padding: 12vh 0 0 10vw;
+        color:$color-highlight-foreground;
+        top: 40vh;
+        width: 80%;
+        margin:0;
+    } 
+
+
+    h5 
+    {
+        
+        font-size: 1em;
+        padding:3vh 0 0 10vw;
+        color:$color-highlight-foreground;
+        width: 80%;
+        margin:0;
+    } 
 
 
     main 
@@ -44,56 +76,182 @@ body.printer
         background-color:$color-primary-background;
         height: 60vh; 
         width: 100%; 
-        position: relative;
+      
+        input#txtFind
+        {
+            margin:3vh 0 0 10vw;
+            font-size:2.5em;
+            width:75%;
+            height: 5vh;
+            padding-left: 5vw;
+        }
 
+        #appointment
+        {
+            label
+            {
+                font-size: 2.5em;
+            }
+              
+            ul 
+           {
+            list-style:none;
+            margin: 0 9vw 0 9vw;
+            width: 75%;
+
+
+                li
+                {
+                    border: 2px solid blue;                
+                    padding: 1vh 0 1vh 0vw;
+                    color:red;
+                    margin:0;
+                    text-align: center;
+                    float: left;
+
+                    
+                    input
+                    {
+                        display:none;
+                    
+                        #ap0
+                        {
+                            left:10%;
+                            width: 30%;
+                            margin-left: 10vw;
+
+                        }
+
+                        #ap1
+                        {
+                            left:70%;
+                            width: 30%;
+
+                        }
+                    }
+                } 
+            }
+            
+        
+        }
     }
 
-   nav.site-nav 
+
+
+
+    fieldset
+    {
+        border: 0px;
+        margin:0;
+
+        #keyboard
+        {
+            height: 20vh;
+            width: auto;
+            padding-top: 2vh;
+            font-size: 2em;
+            text-align: center; 
+            color:black; 
+            
+            
+            .tasten
+            {
+                padding: 1vh 2vw 1vh 2vw; 
+
+                a
+                {
+                    padding: 0.5vh 0.5vw 0.5vh 0.5vw;
+                    border: 2px solid $color-primary-background;
+                    border-radius: 8px;
+                    font-size: 0.8em;
+                    display: inline-block;
+                    width: 2em;
+
+                } 
+                a:hover:not(.active)
+                {
+                    background-color: $color-primary-background;
+                    color: $color-highlight-foreground;
+                }
+            } 
+
+            .sonderzeichen 
+            {
+                margin-top: 1vh;
+                a
+                {   padding: 0.5vh 1.5vw 0.5vh 1.5vw;
+                    border: 2px solid $color-primary-background;
+                    border-radius: 8px;
+                }
+
+                a:hover:not(.active)
+                {
+                    background-color: $color-primary-background;
+                    color:$color-highlight-foreground;
+                }
+
+                #btnOK
+                {
+                    font-size: 1em;
+                    color:black;
+                    padding: 0.5vh 1.5vw 0.5vh 1.5vw;
+                    border: 2px solid $color-primary-background;
+                    border-radius: 8px;
+                    background-color: $color-highlight-foreground;
+
+                }
+
+                #btnOK:hover:not(.active)
+                {
+                    background-color: $color-primary-background;
+                    color:$color-highlight-foreground;
+                }
+            }
+        }
+    }
+     
+
+   .site-nav
    {
         margin: 10vw;
-
         
-        span 
+  
+
+        a
         {
-            text-align: center;
-            border: solid;
-            border-color: $color-secondary-background;
-            border-width: 3px;
+            text-align: left;
+            border: 3px solid $color-secondary-background;
             width: 30vw; 
             background-color: $color-primary-foreground;
+            color: $color-secondary-background;
+            padding: 2vh 0.5vw 2vh 0.5vw;
+            
+        }
+        
+
+        a:hover:not(.active)
+        {
+            background-color: $color-secondary-background;
+            color: white;
             
         }
 
-        span a
-        {
-            width: 200vh;
-            color: $color-secondary-background;
-        } 
 
-        /*span.active
-        {
-            color: green;
-        }*/
-
-        span:hover:not(.active)
-        {
-            background-color: $color-secondary-background;
-
-            h4
-            {
-                color: white;
-            }
-        }
-
-
-        .termin
+        a:first-child
         {   
             float: left;
+            font-size: 2.5em;
+            padding-left: 2vw;
+           
+            
         }
 
-        .ohnetermin
+        a:last-child
         { 
             float: right;
+            font-size: 2.5em;
+            padding-left: 2vw;
+        
         } 
         
           
