--- a/printer/P1_Appointment.cshtml
+++ b/printer/P1_Appointment.cshtml
@@ -15,14 +15,14 @@
   PageData["show_back"] = false;
   Layout = "PrinterLayout.cshtml";
 }
-<main>
+<main class="site-content">
   <h3>Bitte geben Sie den ersten Buchstaben Ihres Vor-und Nachnamens ein.<br>(Martina Muster = MM)</h3>
   <input id="txtFind"/>
   <fieldset id="appointment" style="display: none;">
     <label>
-      <h5>Mein Termin</h5>
-    </label>    
-    <ul>
+      <h5>Mein Termin:</h5>
+    </label> 
+    <ul class="flex-container">
       <li>
           <input id="ap0" name="ap" type="radio" value="10:00" /><label for="ap0">10:00 Uhr</label>
       </li>
@@ -37,6 +37,9 @@
       </li>
     </ul>
   </fieldset>
+  <div id="btnOK2">
+    <a  href='@Model.Navigate("P2_ThankYou.cshtml")'>OK</a>
+  </div>
 </main>
   
 @{
@@ -48,8 +51,6 @@
 }
 
 <fieldset>
-  <!-- <label>Meine Initialen</label>*/
-  <input id="txtFind" />-->
   <div id="keyboard">
     @for (int i = 0; i < keyboard.Length; i++) {
       <div class="tasten">
@@ -63,29 +64,10 @@
     <div class="sonderzeichen">
         <a data-key=" " role="button">Leerzeichen</a>
         <a role="button">-</a>
-        <button id="btnOK">OK</button>
+        <button id="btnOK">Weiter</button>
     </div>
   </div>
 </fieldset>
-
-<!-- <fieldset id="appointment" style="display: none;">
-  <label>Mein Termin</label>
-
-  <ul>
-    <li>
-      <input id="ap0" name="ap" type="radio" value="10:00" /><label for="ap0">10:00 Uhr</label>
-    </li>
-    <li>
-      <input id="ap1" name="ap" type="radio" value="10:15" /><label for="ap1">10:15 Uhr</label>
-    </li>
-    <li>
-      <input id="ap2" name="ap" type="radio" value="10:30" /><label for="ap2">10:30 Uhr</label>
-    </li>
-    <li>
-      <input id="ap3" name="ap" type="radio" value="10:45" /><label for="ap3">10:45 Uhr</label>
-    </li>
-  </ul>
-</fieldset>-->
 
 <script type="text/javascript">
 $(document).ready(function () {
