--- a/styles/printer.scss
+++ b/styles/printer.scss
@@ -5,7 +5,7 @@ body.printer
     header
     {
         display: block;
-        background-color: white;
+        background-color:$color-primary-foreground;
         height: 12vh;
       
         
@@ -31,7 +31,7 @@ body.printer
     {
         
         text-transform: uppercase;
-        font-size: 6em;
+        font-size: 5em;
         padding: 12vh 0 0 10vw;
         color:$color-highlight-foreground;
         margin:0;
@@ -47,7 +47,18 @@ body.printer
         width: 80%;
         
     } 
-    
+
+    div.Todo
+    {
+        
+        font-size: 3em;
+        font-weight: bold;
+        padding: 8vh 0 0 10vw;
+        color:$color-highlight-foreground;
+        top: 40vh;
+        width: 80%;
+        
+    } 
     h3 
     {
         
@@ -63,24 +74,26 @@ body.printer
     h5 
     {
         
-        font-size: 1em;
-        padding:3vh 0 0 10vw;
+        font-size: 2.5em;
+        padding: 4vh 0 0 10vw;
         color:$color-highlight-foreground;
         width: 80%;
         margin:0;
     } 
 
 
-    main 
+    main.site-content 
     {
         background-color:$color-primary-background;
         height: 60vh; 
         width: 100%; 
+        text-overflow: ellipsis;
       
         input#txtFind
         {
             margin:3vh 0 0 10vw;
             font-size:2.5em;
+            font-weight: bold;
             width:75%;
             height: 5vh;
             padding-left: 5vw;
@@ -88,54 +101,79 @@ body.printer
 
         #appointment
         {
-            label
+            .flex-container  
             {
-                font-size: 2.5em;
+                
+                display: flex;
+                flex-wrap: wrap;
+                
+               
+            }  
+            ul
+            {
+                list-style:none; 
             }
-              
-            ul 
-           {
-            list-style:none;
-            margin: 0 9vw 0 9vw;
-            width: 75%;
 
+            .flex-container > li
+            {
 
-                li
+                background-color:$color-primary-shadowred;
+                width: 40%;
+                margin: 2vh 0 0 5vw;
+                text-align: left;
+                line-height: 6vh;
+                font-size: 2.5em;
+                font-weight: bold;
+                color: $color-highlight-foreground;
+
+                label
                 {
-                    border: 2px solid blue;                
-                    padding: 1vh 0 1vh 0vw;
-                    color:red;
-                    margin:0;
-                    text-align: center;
-                    float: left;
+                    padding-left: 2vw;
+                }
+            }
 
-                    
-                    input
-                    {
-                        display:none;
-                    
-                        #ap0
-                        {
-                            left:10%;
-                            width: 30%;
-                            margin-left: 10vw;
+            .flex-container > li:hover:not(.active)
+            {
+                background-color: $color-highlight-foreground;
+                color: black;
+                
+            }
 
-                        }
 
-                        #ap1
-                        {
-                            left:70%;
-                            width: 30%;
-
-                        }
-                    }
-                } 
+            input
+            {
+                display:none;
             }
             
-        
-        }
-    }
+        } 
 
+       #btnOK2
+       { 
+       
+            a
+            {
+                font-size: 4em;
+                color:black;
+                padding: 0.5vh 1.5vw 0.5vh 1.5vw;
+                border: 3px solid $color-primary-background;
+                border-radius: 8px;
+                background-color: $color-highlight-foreground;
+                float: right;
+                margin: 25vh 10vw 0;
+
+
+            }
+
+           a:hover:not(.active)
+            {
+                background-color: $color-primary-background;
+                color:$color-highlight-foreground;
+            }
+        }   
+
+    }   
+        
+        
 
 
 
@@ -214,8 +252,6 @@ body.printer
    .site-nav
    {
         margin: 10vw;
-        
-  
 
         a
         {
@@ -232,7 +268,7 @@ body.printer
         a:hover:not(.active)
         {
             background-color: $color-secondary-background;
-            color: white;
+            color: $color-primary-foreground;
             
         }
 
@@ -251,12 +287,7 @@ body.printer
             float: right;
             font-size: 2.5em;
             padding-left: 2vw;
-        
-        } 
-        
+        }   
           
     }
-
-    
-}
-
+}  
