--- a/printer/P1_GetTicket.cshtml
+++ b/printer/P1_GetTicket.cshtml
@@ -23,22 +23,21 @@
 
     @* wait popup is shown, while generating a new number *@
     <section id="waitPopup" style="display: none;">
-      <h4>Ihr Ticket wird gedruckt.</h4>
+      <h1>SO GEHT‘S WEITER.</h1>
+      <h2>Ziehen Sie ihr Ticket und machen Sie es sich auf dem Sofa bequem.<br>Wir sind ruckzuck für Sie da.</h2>
       <div>
-        <img src="images/wait.gif" id="wait" alt="wait" />
-      </div>
-      <h6>Bitte entnehmen Sie ihre Wartenummer</h6>
-      <img src="images/PfeilUnten.png" />
+      <img src="images/wait.gif" id="wait" alt="wait" />
+      <p>Ihr Ticket wird gedruckt.</p>
     </section>
 
     @* take popup is shown, when the printout is ready *@
-    <section id="takePopup" style="display: none;">
-        <h4>Ihre Wartemarke wird gedruckt</h4>
+    <section id="takePopup" style="display: block;">
+      <h1>SO GEHT‘S WEITER.</h1>
+      <h2>Ziehen Sie ihr Ticket und machen Sie es sich auf dem Sofa bequem.<br>Wir sind ruckzuck für Sie da.</h2>
       <div>
         <img src="images/wait.gif" id="wait" alt="wait" />
       </div>
-      <h6>Bitte entnehmen Sie ihre Wartenummer</h6>
-      <img src="images/PfeilUnten.png" />
+      <p>Ihr Ticket wird gedruckt.</p> 
     </section>
 
     @* show popup shows the number on the screen *@
