--- a/printer/P1_GetTicket_List.cshtml
+++ b/printer/P1_GetTicket_List.cshtml
@@ -9,7 +9,7 @@
   var tracking_id = (string)Model.Style["tracking_id"].Value;
 }
 <h3>WORÜBER MÖCHTEN SIE HEUTE MIT UNS SPRECHEN?</h3>
-<ul>
+<ul class="flex-container">
   @for (int i = 1; i <= 8; i++) {
     if (!String.IsNullOrEmpty((string)Model.Style["text" + i].Value)) {
       var queueid = Model.Style["queueid" + i].Value;
