--- a/display/List3.cshtml
+++ b/display/List3.cshtml
@@ -65,16 +65,18 @@ else
     <head>
         <title>Vocatis</title>
         <link href="@Href("display.css")" type="text/css" rel="Stylesheet" />
-    </head>
+    </head>  
+    <img src="platzhalter.png" class="platzhalter" alt="platzhalter">
     <body class="list">
         @Scripts.Render("~/Scripts/jquery", "~/Scripts/forms", "~/Scripts/vocatis.js")
         <header>
-            <img src="plattformlogo_01.png" class="plattformlogo" alt="plattformlogo">
-            <h1>Wartebereich</h1>
         </header>
+  
+    <div id="content">  
         <h2>
-            Bitte warten Sie, bis Ihre Nummer erscheint:
+            Wir beraten gerade
         </h2>
+    </div>
         @ItemsList(list, cats)
 
         @{
@@ -116,6 +118,7 @@ else
                     });
             });
         </script>
+      
     </body>
 </html>
 }
