--- a/styles/printer.scss
+++ b/styles/printer.scss
@@ -188,6 +188,19 @@ body.printer
             width: 80%;
             margin:0;
         }
+           
+        div.Todo
+        {
+          p
+          {
+            font-size: 3em;
+            font-weight: bold;
+            padding: 8vh 0 0 10vw;
+            color:white;
+            top: 40vh;
+            width: 80%;
+            }     
+        } 
             
        
     
