--- a/printer/App.cshtml
+++ b/printer/App.cshtml
@@ -6,11 +6,12 @@
   <title>Vocatis</title>
   <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0">
   <meta name="theme-color" content="#53668D"/>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <link href="@Href("app.css")" type="text/css" rel="stylesheet" />
 </head>
 <body>
-  <header>
+
+<header>
  <img src="images/plattform.png" class="plattform" alt="plattform">
  <h1><span style="text-transform:uppercase">Wartezeit</span>  Live-Abfrage</h1>
 </header>
