Ablauf für "mit Termin". Erforderd iSign (5.0.115+)

--- a/printer/PrinterLayout.cshtml
+++ b/printer/PrinterLayout.cshtml
@@ -34,8 +34,8 @@
   @Scripts.Render("~/Scripts/jquery", "~/Scripts/forms", "~/Scripts/vocatis.js", "js/hammer.min.js")
   <header>
     <img src="images/plattformlogo.png" class="plattformlogo" alt="plattformlogo">
-    @if (PageData["show_back"] == true) { <a href="javascript: window.history.back()"><img src="images/back.png" class="back" alt="back"></a> }
-    @if (PageData["show_home"] == true) { <a href="@model.NavigateHome()"><img src="images/home.png" class="home" alt="home"></a> }
+    @if (PageData["show_back"] == true) { <a id="btnBack" href="javascript: window.history.back()" class='@PageData["back_class"] ?? ""'><img src="images/back.png" class="back" alt="back"></a> }
+    @if (PageData["show_home"] == true) { <a id="btnHome" href="@model.NavigateHome()" class='@PageData["home_class"] ?? ""'><img src="images/home.png" class="home" alt="home"></a> }
   </header>
   
     @RenderBody()
@@ -49,8 +49,8 @@
       hamertime enables touch features and reduces reaction time
      *@
     $("body")
-    .disableSelect()
-    .clickBlanking({ timeout:500 });
+      .disableSelect()
+      .clickBlanking({ timeout:500 });
     var hammertime = new Hammer(document.body, {});
   });
   </script>
