--- a/printer/P0_Main.cshtml
+++ b/printer/P0_Main.cshtml
@@ -14,10 +14,10 @@ Printer main entry page
   PageData["show_back"] = false;
   Layout = "PrinterLayout.cshtml";
 }
-<main class="site-content">
+<div class="site-content">
   <h1>HERZLICH WILLKOMMEN!</h1>
   <h2>Schön, dass Sie da sind. Haben Sie einen Termin vereinbart?</h2>
-</main>
+</div>
 
 <nav class="site-nav">
   <a href='@Model.Navigate("P1_Appointment.cshtml")'>Ich habe<br>einen Termin</a>
